--- a/src/styles/jobdetail.scss
+++ b/src/styles/jobdetail.scss
@@ -37,12 +37,20 @@
       padding-bottom: 10px;
       color: $opaque-color;
       .info {
+        letter-spacing: 0.2px;
         margin-bottom: 20px;
         img {
           margin-right: 20px;
         }
       }
     }
+  }
+  .openings {
+    font-size: 14px;
+    font-weight: 900;
+    letter-spacing: 0.5px;
+    margin-left: 55px;
+    margin-bottom: 35px;
   }
   .job-item {
     margin: 15px 30px;
@@ -62,18 +70,23 @@
       align-items: center;
       .title {
         font-weight: 600;
-        font-size: 18px;
+        font-size: 20px;
+        letter-spacing: 0.2px;
       }
       .other {
         font-weight: 600;
         color: $opaque-color;
+        letter-spacing: 0.5px;
+        font-size: 14px;
       }
       .right {
         img {
           margin-right: 10px;
         }
+        letter-spacing: 0.5px;
         font-weight: 600;
         color: $opaque-color;
+        font-size: 14px;
       }
     }
     .middle {
