--- a/src/styles/jobitem.scss
+++ b/src/styles/jobitem.scss
@@ -5,6 +5,7 @@
   padding-top: 30px;
   padding-bottom: 30px;
   position: relative;
+  letter-spacing: 0.5px;
   &:hover {
     border: 1px solid $lightishblue;
     background-color: #fff;
@@ -20,7 +21,6 @@
         background-color: #677a88;
         color: white;
         border: 0;
-        font-weight: 500;
       }
     }
     &::before {
@@ -51,6 +51,7 @@
     display: flex;
     align-items: center;
     width: 100%;
+    margin-bottom: 10px;
     &>img {
       margin-left: 30px;
       margin-right: 30px;
@@ -62,18 +63,18 @@
       font-size: 20px;
     }
     .type {
-      width: 200px;
+      width: 230px;
       font-size: 14px;
       color: $opaque-color;
       img {
-        margin-right: 20px;
+        margin-right: 15px;
       }
     }
   }
   .description {
     display: flex;
     margin-left: 130px;
-    margin-bottom: 20px;
+    margin-bottom: 23px;
     font-size: 14px;
     .title {
       width: 120px;
@@ -87,9 +88,9 @@
     }
     .location {
       img {
-        margin-right: 20px;
+        margin-right: 15px;
       }
-      width: 200px;
+      width: 230px;
     }
   }
   .job-item-footer {
@@ -99,6 +100,10 @@
     justify-content: space-between;
     align-items: center;
     .time {
+      div:first-of-type{
+        position: relative;
+        top: -18px;
+      }
       color: $opaque-color;
       line-height: 28px;
       font-weight: 500;
@@ -115,7 +120,7 @@
       line-height: 36px;
       font-size: 1em;
       background-color: #fff;
-      margin-right: 60px;
+      margin-right: 100px;
       color: $opaque-color;
       cursor: pointer;
       outline: 0;
